[workspace]
members = ["contracts/*"]

[profile.release.package.cw-swap-remote]
codegen-units = 1
incremental = false

[profile.release.package.cw-swap]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
